<resources>
    <string name="app_name">TrekPlanner</string>

    <string name="search_item">Search item</string>

    <string name="title_activity_login"></string>
    <string name="action_settings">Asetukset</string>
    <string name="term_item">Varuste</string>
    <string name="term_items">Varusteet</string>
    <string name="term_trek">Retki</string>
    <string name="term_treks">Retket</string>
    <string name="term_notes">Muistiinpanot</string>
    <string name="term_description">Kuvaus</string>
    <string name="term_kilogram">kg</string>
    <string name="term_gram">g</string>
    <string name="term_kilometer">km</string>
    <string name="term_meter">m</string>
    <string name="term_start_end">Alku-Loppupäivä</string>
    <string name="term_data">Tiedot</string>
    <string name="term_was_used">Käytetty</string>
    <string name="term_pieces">kpl</string>
    <string name="term_spring">Kevät</string>
    <string name="term_summer">Kesä</string>
    <string name="term_autum">Syksy</string>
    <string name="term_winter">Talvi</string>
    <string name="term_automated_theme">Automaattinen vuodenaika</string>
    <string name="term_lesson">Opittua</string>
    <string name="term_start_end_coord">Koordinaatit</string>
    <string name="term_length">Pituus</string>
    <string name="term_level">Taso</string>
    <string name="term_itemtype">Tyyppi</string>
    <string name="term_deadline">Muistutuspäivä</string>
    <string name="term_weight">Paino</string>
    <string name="term_name">Nimi</string>
    <string name="term_picture">Kuva</string>
    <string name="term_energy">Energiasisältö</string>
    <string name="term_protein">Proteiinia</string>
    <string name="term_default">Oletusvaruste</string>
    <string name="term_camera">Kamera</string>
    <string name="term_gallery">Galleria</string>
    <string name="term_daytrip">Päiväretki</string>
    <string name="term_overnighttrip">Yön yli -retki</string>
    <string name="term_weektrip">Pidempi retki</string>
    <string name="term_wintertrip">Talviretki</string>
    <string name="term_start_date">Alkupäivä</string>
    <string name="term_end_date">Loppupäivä</string>
    <string name="term_save">OK</string>
    <string name="term_total_weight">Kokonaispaino</string>

    <!--settings -->
    <string name="term_settings">Asetukset</string>
    <string name="term_nickname">Lempinimi</string>
    <string name="term_theme">Teema</string>
    <string name="term_weight_unit">Painon yksikkö</string>
    <string name="term_length_unit">Pituuden yksikkö</string>
    <string name="summary_length_unit">Ilmoita pituudet annetussa yksikössä. Valittu yksikkö on:</string>
    <string name="summary_nickname">Lempinimeä käytetään tunnistamaan käyttäjä ja retkikunnan jäsen. Nykyinen lempinimesi on:</string>
    <string name="summary_theme">Valitse applikaation väriteema. Valittu teema:</string>
    <string name="summary_weight_unit">Ilmoita painot annetussa yksikössä. Valittu yksikkö on:</string>
    <string name="dialog_title_theme">Väriteema</string>
    <string name="dialog_title_weight_unit">Painon yksikkö</string>
    <string name="dialog_title_length_unit">Pituuden yksikkö</string>

    <string name="phrase_clear_db">Tyhjennä tietokanta</string>
    <string name="phrase_load_defaults">Lataa oletukset</string>
    <string name="phrase_help">Ohje...</string>
    <string name="phrase_save_success">Tallennus onnistui</string>
    <string name="phrase_export">Vie...</string>
    <string name="phrase_import">Tuo...</string>
    <string name="phrase_search">Hae</string>
    <string name="phrase_settings">Asetukset</string>
    <string name="phrase_welcome">Tervetuloa!</string>
    <string name="phrase_delete_success">Poisto onnistui</string>
    <string name="phrase_confirm_delete">Oletko varma että haluat poistaa kohteen</string>
    <string name="phrase_notification">Huomio!</string>
    <string name="phrase_sort_by_itemtype">(a..z) Tyyppi</string>
    <string name="phrase_sort_by_name">(a..z) Nimi</string>
    <string name="phrase_select">Valitse</string>
    <string name="phrase_doublevalue_hint">0.000</string>
    <string name="phrase_datetimevalue_hint">pp.kk.vvvv hh:mm</string>
    <string name="phrase_coordinatevalue_hint">61°10,83\'N, 24°33,48\'E</string>
    <string name="phrase_select_date">Valitse päivä</string>
    <string name="phrase_select_time">Valitse aika</string>
    <string name="phrase_select_filesystem">Valitse kohde</string>
    <string name="phrase_name_required">Nimi pakollinen</string>
    <string name="phrase_import_trektemplate">Tuo retkipohja...</string>
    <string name="phase_select_trekitems">Valitse varusteita retkelle</string>
    <string name="phrase_you_want_to_leave">Haluatko poistua?</string>
    <string name="phrase_create_new_item">Luo uusi varuste</string>
    <string name="phrase_add_default_items">Lisätäänkö retkelle oletusvarusteet?</string>

    <string name="enum_itemstatus1">item_status_1</string>
    <string name="enum_itemstatus2">item_status_2</string>
    <string name="enum_itemstatus3">item_status_3</string>

    <string name="enum_itemtype1">item_type_1</string>
    <string name="enum_itemtype2">item_type_2</string>
    <string name="enum_itemtype3">item_type_3</string>
    <string name="enum_itemtype4">item_type_4</string>
    <string name="enum_itemtype5">item_type_5</string>
    <string name="enum_itemtype6">item_type_6</string>
    <string name="enum_itemtype7">item_type_7</string>
    <string name="enum_itemtype8">item_type_8</string>

    <string name="enum_trekitemstatus1">trek_item_status_1</string>
    <string name="enum_trekitemstatus2">trek_item_status_2</string>
    <string name="enum_trekitemstatus3">trek_item_status_3</string>

    <string name="enum_theme_spring">theme_spring</string>
    <string name="enum_theme_summer">theme_summer</string>
    <string name="enum_theme_autum">theme_autum</string>
    <string name="enum_theme_winter">theme_winter</string>
    <string name="enum_theme_automated">theme_automated_seasons</string>

    <string name="item_status_1">OK</string>
    <string name="item_status_2">Rikki</string>
    <string name="item_status_3">Hukassa</string>

    <string name="item_type_1">Varuste</string>
    <string name="item_type_2">Kantoväline</string>
    <string name="item_type_3">Ruoka</string>
    <string name="item_type_4">Idea</string>
    <string name="item_type_5">Muista</string>
    <string name="item_type_6">Huomio</string>
    <string name="item_type_7">Tehtävä</string>
    <string name="item_type_8">Ruokailuväline</string>

    <string name="trek_level_1">Helppo</string>
    <string name="trek_level_2">Keskivaikea</string>
    <string name="trek_level_3">Vaikea</string>

    <string name="trek_item_status_1">Listalla</string>
    <string name="trek_item_status_2">Mukana</string>
    <string name="trek_item_status_3">Palautettu</string>

    <string name="expand_marks">...</string>
    <string name="separator">/</string>

    <string name="fs_harddrive">Puhelin</string>
    <string name="fs_onedrive">OneDrive</string>
    <string name="fs_gdrive">GDrive</string>
    <string name="term_add_to_items">Lisää varustelistalle</string>
    <string name="phase_trekitem_saved_to_items">Varuste lisättiin varustelistalle</string>

</resources>