<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_type_1"
        android:icon="@drawable/item"
        android:title="@string/item_type_1" />
    <item
        android:id="@+id/item_type_2"
        android:icon="@drawable/backpack"
        android:title="@string/item_type_2" />
    <item
        android:id="@+id/item_type_3"
        android:icon="@drawable/food"
        android:title="@string/item_type_3" />
    <item
        android:id="@+id/item_type_4"
        android:icon="@drawable/idea"
        android:title="@string/item_type_4" />
    <item
        android:id="@+id/item_type_5"
        android:icon="@drawable/remember"
        android:title="@string/item_type_5" />
    <item
        android:id="@+id/item_type_6"
        android:icon="@drawable/idea"
        android:title="@string/item_type_6" />
    <item
        android:id="@+id/item_type_7"
        android:icon="@drawable/task"
        android:title="@string/item_type_7" />
    <item
        android:id="@+id/item_type_8"
        android:icon="@drawable/cutlery"
        android:title="@string/item_type_8" />

</menu>