<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.tripplanner.MainActivity">

    <item
        android:id="@+id/action_search"
        android:orderInCategory="98"
        android:title="@string/phrase_search"
        android:icon="@android:drawable/ic_menu_search"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="99"
        android:title="@string/phrase_settings"/>

    <item
        android:id="@+id/action_export"
        android:orderInCategory="100"
        android:title="@string/phrase_export"/>

    <item
        android:id="@+id/action_import"
        android:orderInCategory="101"
        android:title="@string/phrase_import"/>

    <item
        android:id="@+id/action_loaddefaults"
        android:orderInCategory="102"
        android:title="@string/phrase_load_defaults"/>

    <item
        android:id="@+id/action_cleardatabase"
        android:orderInCategory="103"
        android:title="@string/phrase_clear_db"/>

    <item
        android:id="@+id/action_help"
        android:orderInCategory="104"
        android:title="@string/phrase_help"/>
</menu>
